  * [SessionS] Added extra condition to determine if the increment is considered the roundIncrement
  * [SessionS] Cloned the charging interval added on EventCost merge 
  * [FilterS] Optimized the automated index fields matching
  * [AgentS] Added *routes_maxcost flag
  * [SessionS] Replaced max_call_duration config with default_usage for each ToR

 -- DanB <danb@cgrates.org>  Thu, 08 Oct 2020 16:23:58 +0300

cgrates (0.10.2) UNRELEASED; urgency=medium

  * [SupplierS] Uniformize the logic in model_helpers.go
  * [FilterS] Updated error message in case of unknown prefix
  * [Server] Corectly log the server listen error
  * [ERs] Add *none EventReader type
  * [ERs] Renamed *default reader folders
  * [General] Added *mo+extraDuration time support (e.g. *mo+1h will 
    be time.Now() + 1 month + 1 hour)
  * [SessionS] Use correctly SessionTTLUsage when calculate end usage in case of terminate session from ttl mechanism
  * [RSRParsers] Removed attribute sistem from RSRParser  
  * [RSRParsers] Added grave accent(`) char as a delimiter to not split tge RSR value
  * [SessionS] Rename from ResourceMessage to ResourceAllocation
  * [AgentS] Correctly verify flags for setting max usage in ProcessEvent
  * [AgentS] DiameterAgent return NOT_FOUND instead of "filter not passing" error and let other subsystem to handle this (e.g. FilterS)

 -- DanB <danb@cgrates.org>  Tue, 12 May 2020 13:08:15 +0300

cgrates (0.10.1) UNRELEASED; urgency=medium

  * [FilterS] Removed rals_conns in favor of reading the account
    directly from DataDB
  * [SessionS] Added check for missing CGRevent
  * [DiameterAgent] Using String function from diam.Message instead of
    ToJSON for request String method
  * [DiameterAgent] Updated 3gp_vendor dictionary
  * [Templates] Added new dataconverter: *ip2hex
  * [AgentS] Added support for *group type and correctly overwrite
    the values in case of *variable
  * [ERs] Correctly populate ConcurrentRequest from config in
    EventReader